--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
+.container-box {
+	height: 100vh;
+	display: grid;
+	place-items: center;
+}
+
+.container-form {
+	width: 350px;
+	padding: 5rem;
+	background-color: #fff;
+	border: 2px solid black;
+	border-radius: 8px;
+}
+
+.title {
+	font-weight: bolder;
+	font-size: 2rem;
+	margin-bottom: 2rem;
+	text-align: center;
+}
+
+.text-label {
+	display: block;
+}
+
+input {
+	width: 100%;
+	font-size: 16px;
+	padding: 10px 10px 10px 5px;
+}
+
+.submit-button {
+	width: 100%;
+	padding: 12px 8px;
+	border: none;
+	border-radius: 10px;
+	font-size: 16px;
+	margin: 20px 0;
+	cursor: pointer;
+}
